Bug 361326 - Unable to select curves by clicking on it.
Summary: Unable to select curves by clicking on it.
Status: RESOLVED FIXED
Alias: None
Product: LabPlot2
Classification: Applications
Component: frontend (other bugs)
Version First Reported In: unspecified
Platform: Kubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Alexander Semke
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-04-02 16:13 UTC by Anu
Modified: 2016-12-28 20:10 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.4
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Anu 2016-04-02 16:13:35 UTC
When I create a new worksheet > new x-y plot  followed by adding:
--> two x-y curves from a mathematical equation: I am only able to select the second curve by directly clicking on it, clicking on the first curve doesn't highlight it.
--> three x-y curves from mathematical equation: I am able to select only the third curve by directly clicking on it, clicking on the other two curve doesn't highlight them.
--> similar is the same with four curves, only the last curve can be selected by clicking on it.
Is it suppose to be in this manner?

Reproducible: Always

Steps to Reproduce:
1.Create new worksheet
2.Add new > x-y plot
3.Under xy plot add new> x-y curves from mathematical equation more than one.

Actual Results:  
Unable to select the curve by clicking on it.

Expected Results:  
Whichever curve has been selected by clicking on it must get highlighted.
Comment 1 revcorey 2016-05-26 14:41:11 UTC
Hello,
Today I've checked pull code and compile labplot but in version 2.2.0 everything looks ok for me.

I can select all curves.
Comment 2 Alexander Semke 2016-05-26 18:37:39 UTC
The problem exists for curves which have overlapping bounding boxes. For example, create a plot and add two curves defined via a math. equation  -  f(x)=sin(x) and f(x)=cos(x) and plot them from x=0 to x=1. It is not possible to select the sin curve if you click on it beyond x=0.8 since it is covered by the cos curve in this region that is drawn on top of it. However, it is possible to select the underlying sin-curve if you click somewhere below x=0.8 where there is no overlapping.
Comment 3 Alexander Semke 2016-12-28 20:10:58 UTC
Git commit 58d76e2b30968c74948a8ccbfec35d2a5b5bf04d by Alexander Semke.
Committed on 28/12/2016 at 20:08.
Pushed by asemke into branch 'master'.

Allow to select curves with overlapping bounding boxes.
FIXED-IN: 2.4

M  +25   -1    src/commonfrontend/worksheet/WorksheetView.cpp

https://commits.kde.org/labplot/58d76e2b30968c74948a8ccbfec35d2a5b5bf04d