Allow to select curves with overlapping bounding boxes.

BUG: 361326
FIXED-IN: 2.4